--- a/data-ingestion/config.toml
+++ b/data-ingestion/config.toml
@@ -6,7 +6,7 @@ s3_url="https://de-materials-tpcds.s3.ca-central-1.amazonaws.com/inventory.csv"
 # download the file into this folder in lambda ephemeral storage:
 destination_folder = "/tmp"
 # download the file with this filename:
-filename = "inventory.csv"
+file_name = "inventory.csv"
 
 [snowflake]
 # snowflake database that the file will be uploaded to:
